datastore-charts/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: torino-datastore-ingress
  annotations:
    kubernetes.io/ingress.class: torino-webapp-ingress
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: torino-datastore
              servicePort: 8080
            path: /datastore(/|$)(.*)
